--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: stepper_a
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: StepperA is a simple and robust Flutter package which is making it possible to use FormKey validation and easy access your own button press control.
+version: 1.0.0
+homepage: https://github.com/uttom41/StepperA
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
